dom/canvas/DrawTargetWebgl.cpp
@@ -1662,7 +1662,7 @@ bool DrawTargetWebgl::SharedContext::DrawRectAccel(
   // ensure the framebuffer is prepared for drawing. If not, fall back to using
   // the Skia target.
   if (!SupportsDrawOptions(aOptions) || !SupportsPattern(aPattern) ||
-      !mCurrentTarget->MarkChanged()) {
+      aStrokeOptions || !mCurrentTarget->MarkChanged()) {
     // If only accelerated drawing was requested, bail out without software
     // drawing fallback.
     if (!aAccelOnly) {
@@ -1764,10 +1764,9 @@ bool DrawTargetWebgl::SharedContext::DrawRectAccel(
             {(const uint8_t*)viewportData, sizeof(viewportData)});
         mDirtyViewport = false;
       }
-      if (mDirtyAA || aStrokeOptions || aVertexRange) {
-        // Native lines use line smoothing. Generated paths provide their own
-        // AA as vertex alpha.
-        float aaData = aStrokeOptions || aVertexRange ? 0.0f : 1.0f;
+      if (mDirtyAA || aVertexRange) {
+        // Generated paths provide their own AA as vertex alpha.
+        float aaData = aVertexRange ? 0.0f : 1.0f;
         mWebgl->UniformData(LOCAL_GL_FLOAT, mSolidProgramAA, false,
                             {(const uint8_t*)&aaData, sizeof(aaData)});
         mDirtyAA = aaData == 0.0f;
@@ -1791,9 +1790,8 @@ bool DrawTargetWebgl::SharedContext::DrawRectAccel(
         mWebgl->DrawArrays(LOCAL_GL_TRIANGLES, GLint(aVertexRange->mOffset),
                            GLsizei(aVertexRange->mLength));
       } else {
-        // Otherwise we're drawing a simple stroked/filled rectangle.
-        mWebgl->DrawArrays(
-            aStrokeOptions ? LOCAL_GL_LINE_LOOP : LOCAL_GL_TRIANGLE_FAN, 0, 4);
+        // Otherwise we're drawing a simple filled rectangle.
+        mWebgl->DrawArrays(LOCAL_GL_TRIANGLE_FAN, 0, 4);
       }
       success = true;
       break;
@@ -1978,14 +1976,14 @@ bool DrawTargetWebgl::SharedContext::DrawRectAccel(
             {(const uint8_t*)viewportData, sizeof(viewportData)});
         mDirtyViewport = false;
       }
-      if (mDirtyAA || aStrokeOptions || aVertexRange) {
-        // AA is not supported for OP_SOURCE. Native lines use line smoothing.
-        // Generated paths provide their own AA as vertex alpha.
+      if (mDirtyAA || aVertexRange) {
+        // AA is not supported for OP_SOURCE. Generated paths provide their own
+        // AA as vertex alpha.
 
-        float aaData = mLastCompositionOp == CompositionOp::OP_SOURCE ||
-                               aStrokeOptions || aVertexRange
-                           ? 0.0f
-                           : 1.0f;
+        float aaData =
+            mLastCompositionOp == CompositionOp::OP_SOURCE || aVertexRange
+                ? 0.0f
+                : 1.0f;
         mWebgl->UniformData(LOCAL_GL_FLOAT, mImageProgramAA, false,
                             {(const uint8_t*)&aaData, sizeof(aaData)});
         mDirtyAA = aaData == 0.0f;
@@ -2082,9 +2080,8 @@ bool DrawTargetWebgl::SharedContext::DrawRectAccel(
         mWebgl->DrawArrays(LOCAL_GL_TRIANGLES, GLint(aVertexRange->mOffset),
                            GLsizei(aVertexRange->mLength));
       } else {
-        // Otherwise we're drawing a simple stroked/filled rectangle.
-        mWebgl->DrawArrays(
-            aStrokeOptions ? LOCAL_GL_LINE_LOOP : LOCAL_GL_TRIANGLE_FAN, 0, 4);
+        // Otherwise we're drawing a simple filled rectangle.
+        mWebgl->DrawArrays(LOCAL_GL_TRIANGLE_FAN, 0, 4);
       }
 
       // Restore the default linear filter if overridden.
@@ -2902,28 +2899,13 @@ void DrawTargetWebgl::SetTransform(const Matrix& aTransform) {
   mSkia->SetTransform(aTransform);
 }
 
-bool DrawTargetWebgl::StrokeRectAccel(const Rect& aRect,
-                                      const Pattern& aPattern,
-                                      const StrokeOptions& aStrokeOptions,
-                                      const DrawOptions& aOptions) {
-  // TODO: Support other stroke options. Ensure that we only stroke with the
-  // default settings for now.
-  if (mWebglValid && SupportsPattern(aPattern) &&
-      aStrokeOptions == StrokeOptions() && mTransform.PreservesDistance()) {
-    DrawRect(aRect, aPattern, aOptions, Nothing(), nullptr, true, true, false,
-             false, &aStrokeOptions);
-    return true;
-  }
-  return false;
-}
-
 void DrawTargetWebgl::StrokeRect(const Rect& aRect, const Pattern& aPattern,
                                  const StrokeOptions& aStrokeOptions,
                                  const DrawOptions& aOptions) {
   if (!mWebglValid) {
     MarkSkiaChanged(aOptions);
     mSkia->StrokeRect(aRect, aPattern, aStrokeOptions, aOptions);
-  } else if (!StrokeRectAccel(aRect, aPattern, aStrokeOptions, aOptions)) {
+  } else {
     // If the stroke options are unsupported, then transform the rect to a path
     // so it can be cached.
     SkPath skiaPath;
@@ -3004,40 +2986,33 @@ void DrawTargetWebgl::Stroke(const Path* aPath, const Pattern& aPattern,
     return;
   }
   const auto& skiaPath = static_cast<const PathSkia*>(aPath)->GetPath();
-  SkRect rect;
   if (!mWebglValid) {
     MarkSkiaChanged(aOptions);
     mSkia->Stroke(aPath, aPattern, aStrokeOptions, aOptions);
     return;
   }
-  if (skiaPath.isRect(&rect)) {
-    if (StrokeRectAccel(SkRectToRect(rect), aPattern, aStrokeOptions,
-                        aOptions)) {
-      return;
-    }
-    // If accelerated rect drawing failed, just treat it as a path.
-  } else {
-    // Avoid using Skia's isLine here because some paths erroneously include a
-    // closePath at the end, causing isLine to not detect the line. In that case
-    // we just draw a line in reverse right over the original line.
-    int numVerbs = skiaPath.countVerbs();
-    if (numVerbs >= 2 && numVerbs <= 3) {
-      uint8_t verbs[3];
-      skiaPath.getVerbs(verbs, numVerbs);
-      if (verbs[0] == SkPath::kMove_Verb && verbs[1] == SkPath::kLine_Verb &&
-          (numVerbs < 3 || verbs[2] == SkPath::kClose_Verb)) {
-        Point start = SkPointToPoint(skiaPath.getPoint(0));
-        Point end = SkPointToPoint(skiaPath.getPoint(1));
-        if (StrokeLineAccel(start, end, aPattern, aStrokeOptions, aOptions)) {
-          if (numVerbs >= 3) {
-            StrokeLineAccel(end, start, aPattern, aStrokeOptions, aOptions);
-          }
-          return;
+
+  // Avoid using Skia's isLine here because some paths erroneously include a
+  // closePath at the end, causing isLine to not detect the line. In that case
+  // we just draw a line in reverse right over the original line.
+  int numVerbs = skiaPath.countVerbs();
+  if (numVerbs >= 2 && numVerbs <= 3) {
+    uint8_t verbs[3];
+    skiaPath.getVerbs(verbs, numVerbs);
+    if (verbs[0] == SkPath::kMove_Verb && verbs[1] == SkPath::kLine_Verb &&
+        (numVerbs < 3 || verbs[2] == SkPath::kClose_Verb)) {
+      Point start = SkPointToPoint(skiaPath.getPoint(0));
+      Point end = SkPointToPoint(skiaPath.getPoint(1));
+      if (StrokeLineAccel(start, end, aPattern, aStrokeOptions, aOptions)) {
+        if (numVerbs >= 3) {
+          StrokeLineAccel(end, start, aPattern, aStrokeOptions, aOptions);
         }
-        // If accelerated line drawing failed, just treat it as a path.
+        return;
       }
+      // If accelerated line drawing failed, just treat it as a path.
     }
   }
+
   DrawPath(aPath, aPattern, aOptions, &aStrokeOptions);
 }
 
